--- a/postit.css
+++ b/postit.css
@@ -1,28 +1,97 @@
 div.noteBoard {
 	position: relative;
-	background-color: lightblue;
+	background-color: azure;
     width: 1000px;
     height: 800px;
     border: 1px solid blue;
     z-index: 0;
 }
 
-div.note {
+div.yellowNote {
 	position: absolute;
 	background-color: lightyellow;
     width: 250px;
     height: 250px;
 }
 
-button.delButton {
-	background-color: gold;
+div.pinkNote {
 	position: absolute;
+	background-color: lightpink;
+    width: 250px;
+    height: 250px;
+}
+
+div.blueNote {
+	position: absolute;
+	background-color: lightblue;
+    width: 250px;
+    height: 250px;
+}
+
+div.greenNote {
+	position: absolute;
+	background-color: lightgreen;
+    width: 250px;
+    height: 250px;
+}
+
+div.menuButton {
+	background-color: lightgray;
+	position: absolute;
+	width: 20px;
+    height: 20px;
 	right: 5px;
 	top: 5px;
+	display: inline-block;
+}
+
+div.menu {
+    display: none;
+    position: absolute;
+    right: 5px;
+    top: 25px;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+div.menuItem {
+	width: 160px;
+	height: 20px;
+	border: 1px solid black;
+	padding: 0px 0px;
+}
+
+div.yellowBox {
+	display: inline-block;
+	width: 40px;
+	height: 20px;
+	background-color: lightyellow;
+}
+
+div.pinkBox {
+	display: inline-block;
+	width: 40px;
+	height: 20px;
+	background-color: lightpink;
+}
+
+div.blueBox {
+	display: inline-block;
+	width: 40px;
+	height: 20px;
+	background-color: lightblue;
+}
+
+div.greenBox {
+	display: inline-block;
+	width: 40px;
+	height: 20px;
+	background-color: lightgreen;
 }
 
 textarea.edNote {
 	width: 100%;
 	height: 100%;
-	background-color: lightyellow;
+	background-color: inherit;
 }
