text area is note size

--- a/postit.css
+++ b/postit.css
@@ -92,4 +92,7 @@ textarea.edNote {
 	width: 100%;
 	height: 100%;
 	background-color: inherit;
+	border-style: none;
+	border-width: 0px;
+	padding: 0px;
 }
