--- a/src/postit.css
+++ b/src/postit.css
@@ -1,4 +1,4 @@
-div.noteBoard {
+.noteBoard {
 	position: relative;
 	background-color: azure;
     width: 1000px;
@@ -14,35 +14,29 @@ div.noteBoard {
 	green	caed9d
 */
 
-div.cffff90Note {
-	position: absolute;
+.note {
+    position: absolute;
+    width: 297px;
+    height: 298px;
+}
+
+.yellowNote {
 	background-image: url("../assets/yellowPostit.png");
-	width: 297px;
-	height: 298px;
 }
 
-div.cfcc3c9Note {
-	position: absolute;
+.pinkNote {
 	background-image: url("../assets/pinkPostit.png");
-	width: 297px;
-	height: 298px;
 }
 
-div.c49F1F6Note {
-	position: absolute;
+.blueNote {
 	background-image: url("../assets/bluePostit.png");
-	width: 297px;
-	height: 298px;
 }
 
-div.ccaed9dNote {
-	position: absolute;
+.greenNote {
 	background-image: url("../assets/greenPostit.png");
-	width: 297px;
-	height: 298px;
 }
 
-div.menuButton {
+.menuButton {
 	background-color: lightgray;
 	position: absolute;
 	width: 20px;
@@ -51,7 +45,7 @@ div.menuButton {
 	top: 5px;
 }
 
-div.menu {
+.menu {
     display: none;
     position: absolute;
     height: 30px;
@@ -61,39 +55,32 @@ div.menu {
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.5);
 }
 
-div.menuItem {
-	height: 20px;
+.menuItem {
+	height: inherit;
 	padding: 0px 0px;
 	display: inline-block;
 }
 
 /* colour select boxes */
 
-div.cffff90Box {
-	display: inline-block;
-	width: 30px;
-	height: 30px;
+.colourBox {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+}
+.yellowBox {
 	background-color: #ffff90;
 }
 
-div.cfcc3c9Box {
-	display: inline-block;
-	width: 30px;
-	height: 30px;
+.pinkBox {
 	background-color: #fcc3c9;
 }
 
-div.c49F1F6Box {
-	display: inline-block;
-	width: 30px;
-	height: 30px;
+.blueBox {
 	background-color: #49F1F6;
 }
 
-div.ccaed9dBox {
-	display: inline-block;
-	width: 30px;
-	height: 30px;
+.greenBox {
 	background-color: #caed9d;
 }
 
